<resources>
    <string name="app_name">Snake</string>
    <string name="Snake_Game">Jogo da Cobra</string>
    <string name="New_Game">Novo Jogo</string>
    <string name="Continue">Continue</string>
    <string name="Backac">Voltar</string>
    <string name="dificul">Dificulty</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="Hard">Hard</string>
    <string name="Att">Atualizar</string>
    <string name="Grid_Range">Tamanho da Grade</string>
    <string name="Big">Grande</string>
    <string name="Small">Pequeno</string>
    <string name="Ok" translatable="false">Ok</string>
    <string name="up">Up</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="down">Down</string>
    <string name="score">Pontuação:</string>
    <string name="gameOver">Game Over</string>
    <string name="Quit">Quit</string>
    <string name="Save">Save e Quit</string>
    <string name="Aviso">Aviso: a alteração das configurações acarretara na perda do ultimo jogo salvo</string>
</resources>
